# lgrep

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/skills/: LGREP_SKILL.md  lgrep-semantic-search.md
.lgrep/: config.json
src/: chunker.rs  config.rs  embedder.rs  error.rs  filter.rs  history.rs  index.rs  indexer.rs  lib.rs  main.rs  searcher.rs  watcher.rs
